[project]
name = "emergent-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.35.2",
    "jupyter>=1.1.1",
    "opencv-python>=4.12.0.88",
    "transformers>=4.57.3",
    "triton-windows>=3.5.1.post21",
]
